import asyncio
from concurrent import futures
import grpc
import time
import os
from proto import agent_pb2, agent_pb2_grpc

AGENT_VERSION = os.environ.get("AGENT_VERSION", "0.1.0")
START_TIME = time.time()

class AgentCoreServicer(agent_pb2_grpc.AgentCoreServicer):
    async def Inference(self, request, context):
        # Replace with real inference logic
        output = f"Echo: {request.input}"
        return agent_pb2.InferenceResponse(output=output, agent_version=AGENT_VERSION)

    async def Status(self, request, context):
        uptime = str(int(time.time() - START_TIME)) + "s"
        return agent_pb2.StatusResponse(agent_version=AGENT_VERSION, status="OK", uptime=uptime)

    async def HotSwap(self, request, context):
        # Stub: In real use, trigger container/image swap
        msg = f"HotSwap requested: {request.new_image} (not implemented)"
        return agent_pb2.HotSwapResponse(success=False, message=msg)

async def serve():
    server = grpc.aio.server()
    agent_pb2_grpc.add_AgentCoreServicer_to_server(AgentCoreServicer(), server)
    server.add_insecure_port('[::]:50051')
    await server.start()
    print("[agent_core] gRPC server started on :50051")
    await server.wait_for_termination()

if __name__ == "__main__":
    asyncio.run(serve())
